webapp: use just single GWT module
 * guvnor-webapp is used only for debugging/testing,
   so there really is no real need to have two different
   GWT modules for it (FastCompiled and Full). Having just one
   module should simplify the configuration and should also
   fix the SDM issue in IDEA introduced recently as the property
   gwt.user.agent.all was not properly replaced during the run